# chrpath

./: .cvsignore  AUTHORS  ChangeLog  ChangeLog.usermap  HACKING  Makefile.am  NEWS  README  acinclude.m4  chrpath.1  chrpath.c  configure.ac  configure.in  elf.c  killrpath.c  main.c  protos.h
deb/: changelog  rules
debian/: .cvsignore  Makefile.am  README.debian  changelog  control  copyright  rules
testsuite/: .cvsignore  Makefile.am  runtest.sh
