dnl Process this file with autoconf to produce a configure script.
AC_INIT(chrpath.c)

AM_INIT_AUTOMAKE("chrpath", "0.1")
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(elf.h fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_BIGENDIAN

dnl Checks for library functions.
AC_CHECK_FUNCS(getopt_long)

CFLAGS="$CFLAGS -W -Wall"

AC_OUTPUT(Makefile)
